--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-avatar": "^5.0.3",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18",
+    "react-intersection-observer": "^9.6.0",
     "swiper": "^11.0.5",
     "zustand": "^4.4.7"
   },
